--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,8 @@
-theme: remote_theme: zendesk/jekyll-theme-zendesk-garden@main
+remote_theme: zendesk/jekyll-theme-zendesk-garden@main
+# remote_theme: pages-themes/slate@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+
 title: Les musiciens d'à côté
 lsi: false
 safe: true
