--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-remote_theme: zendesk/jekyll-theme-zendesk-garden@main
-# remote_theme: pages-themes/slate@v0.2.0
+# remote_theme: zendesk/jekyll-theme-zendesk-garden@main
+remote_theme: pages-themes/slate@main
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
@@ -14,7 +14,7 @@ kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
 
-
+# Ceci marche avec le thème some code in between three mais ça prend trop de place.
 sidebar:
   - doodles
   - admin
