--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,10 @@
+
 # remote_theme: zendesk/jekyll-theme-zendesk-garden@main
-remote_theme: pages-themes/slate@main
+# remote_theme: pages-themes/slate@main
+# remote_theme: pages-themes/slate@v0.2.0
+# remote_theme: "mmistakes/minimal-mistakes@4.24.0"
+remote_theme: "mmistakes/minimal-mistakes@main"
+
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
@@ -16,5 +21,6 @@ kramdown:
 
 # Ceci marche avec le thème some code in between three mais ça prend trop de place.
 sidebar:
+  - index
   - doodles
   - admin
