--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 
 # remote_theme: zendesk/jekyll-theme-zendesk-garden@main
-remote_theme: pages-themes/slate@main
-# remote_theme: pages-themes/slate@v0.2.0
+# remote_theme: pages-themes/slate@main
+remote_theme: pages-themes/slate@v0.2.0
 # remote_theme: "mmistakes/minimal-mistakes@4.24.0"
-#remote_theme: "mmistakes/minimal-mistakes@main"
+# remote_theme: "mmistakes/minimal-mistakes@main"
 
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
