--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+- jekyll-include-cache # add this line to the plugins list if you already have one
 
 title: Association "Les musiciens d'à côté"
 lsi: false
